# qa_guru_python_10_18

./: README.md  pyproject.toml
